--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.2",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
