--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=budget_immobilier
+DB_DATABASE=immobilier
 DB_USERNAME=root
 DB_PASSWORD=
 
