--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Budget Immobilier 
 APP_ENV=local
 APP_KEY=base64:eA/7TtQlWTZu/DYmBXf1wAIAjFwh/bnlaoirCKsMjB8=
 APP_DEBUG=true
