--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.2",
-        "yajra/laravel-datatables": "10.0"
+        "yajra/laravel-datatables": "10.0",
+        "illuminate/pagination": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
