--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/pagination": "*",
         "intervention/image": "^2.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.2",
-        "yajra/laravel-datatables": "10.0",
-        "illuminate/pagination": "*"
+        "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
